[gd_scene load_steps=2 format=3 uid="uid://cbcj1sulss7dv"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_80ed7"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_80ed7")

[node name="BuildBridgeButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_right = -88.4951
offset_bottom = 97.417
grow_horizontal = 0
theme_type_variation = &"BlueButton"
text = "Build
Bridge"

[node name="ToggleDebugGridButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -98.5049
offset_bottom = 97.417
grow_horizontal = 0
theme_type_variation = &"BlueButton"
text = "Toggle
Grid"

[connection signal="child_entered_tree" from="BuildBridgeButton" to="." method="_on_button_child_entered_tree"]
[connection signal="pressed" from="BuildBridgeButton" to="." method="_on_build_bridge_button_pressed"]
[connection signal="child_entered_tree" from="ToggleDebugGridButton" to="." method="_on_button_child_entered_tree"]
[connection signal="pressed" from="ToggleDebugGridButton" to="." method="_on_toggle_debug_grid_button_pressed"]
